--- a/api-reference/apis/video-api/texttovideo.mdx
+++ b/api-reference/apis/video-api/texttovideo.mdx
@@ -4,11 +4,7 @@ openapi: 'POST /video/text2video'
 description: "Generate videos from text descriptions using the Text to Video API."
 ---
 
-<a className='custom-button' href='https://videofusion.playground.modelslab.com/text-to-video'>
-<button className='custom-button'>
- Open in Playground
-</button>
-</a>
+### Text to Video
 
 ![Text to Video Example](/images/video-api/assets/images/Text-to-video-059ae4e254324cdd6b271d791167cb35.jpg)
 
