--- a/api-reference/apis/image-editing/removebg-createmask.mdx
+++ b/api-reference/apis/image-editing/removebg-createmask.mdx
@@ -1,96 +1,29 @@
 ---
 title: "Background Removal and Create mask Endpoint"
 openapi: 'POST /removebg_mask'
+description: 'This endpoint removes background from image and create mask.'
 ---
 
-## Overview[​](#overview "Direct link to Overview")
+### Remove Background Mask
+![removebg-createmask endpoint result](/images/image-editing/assets/images/Background-Removal-b950c09956614c3e222247b679b7b1c0.jpg)
 
-This endpoint removes background from image and create mask.
-
-[Open in Playground 🚀](https://imagen.playground.modelslab.com/remove-background)
-
-***
-
-![removebg-createmask endpoint result](\images\image-editing\assets\images\Background-Removal-b950c09956614c3e222247b679b7b1c0.jpg)
-
-## Request[​](#request "Direct link to Request")
-
-```
+## Request
+Make a `POST` request to below endpoint and pass the required parameters as a request body to the endpoint.
+```curl curl
 --request POST 'https://modelslab.com/api/v6/image_editing/removebg_mask' \
 ```
 
-Make a `POST` request to [https://modelslab.com/api/v6/image\_editing/removebg\_mask](https://modelslab.com/api/v6/image_editing/removebg_mask) endpoint and pass the required parameters as a request body to the endpoint.
 
-## Body Attributes[​](#body-attributes "Direct link to Body Attributes")
-
-| Parameter                                 | Description                                                                                                                                      | Values                                         |
-| :---------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------- | :--------------------------------------------- |
-| **key**                                   | Your API Key used for request authorization                                                                                                      | string                                         |
-| **image**                                 | Link or valid base64 data following the format `data:image/jpeg;base64,{your_base64_string}` for the image you want your generations to resemble | URL, base64 string                             |
-| **alpha\_matting**                        | Whether to perform alpha matting. It accepts `true` or `false`. Default is `false`                                                               | boolean                                        |
-| **post\_process\_mask**                   | Whether to post-process the mask image. It accepts `true` or `false`. Default is `false`                                                         | boolean                                        |
-| **only\_mask**                            | Whether to return only the mask image. It accepts `true` or `false`. Default is `false`                                                          | boolean                                        |
-| **inverse\_mask**                         | This will inverse the generated mask. It accepts `true` or `false`. Default is `false`                                                           | boolean                                        |
-| **seed**                                  | The seed used to reproduce results. The same seed will give you the same image again. Pass null for a random number.                             | integral value                                 |
-| **base64**                                | Get response as base64 string, default: `false` , options: `true` or `false`                                                                     | boolean (`true` or `false`) (default: `false`) |
-| **alpha\_matting\_foreground\_threshold** | The threshold for alpha matting foreground. The default is 240                                                                                   | integer (0 to 240)                             |
-| **alpha\_matting\_background\_threshold** | The threshold for alpha matting background. The default is 20                                                                                    | integer (0 to 20)                              |
-| **alpha\_matting\_erode\_size**           | The erode size for alpha matting. The default is 5                                                                                               | integer (0 to 5)                               |
-| **webhook**                               | Provide a URL to receive a POST API call once the image generation is complete                                                                   | URL                                            |
-| **track\_id**                             | This ID is returned in the response to the webhook API call and will be used to identify the webhook request.                                    | integral value                                 |
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body
-
-```
-{    "key":"",    "seed":12345,    "image":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/2ILk0g1tgpk7wFFlc72hyAtdmHjxAj-metaZjNkNzVjMWQtMTI1OS00NDA4LTg0YmQtNzA0NTVmMTljZjcwLTAucG5n-.png",    "post_process_mask": false,    "only_mask": false,    "alpha_matting":false,    "webhook": null,    "track_id": null  }
-```
-
-### Request[​](#request-1 "Direct link to Request")
-
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
-
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({    "key":"",    "seed":12345,    "image":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/2ILk0g1tgpk7wFFlc72hyAtdmHjxAj-metaZjNkNzVjMWQtMTI1OS00NDA4LTg0YmQtNzA0NTVmMTljZjcwLTAucG5n-.png",    "post_process_mask": false,    "only_mask": false,    "alpha_matting":false,    "webhook": null,    "track_id": null   });var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v6/image_editing/removebg_mask", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
-
-```
-<?php$payload = [    "key" =>"",    "seed" =>12345,    "image" => "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/2ILk0g1tgpk7wFFlc72hyAtdmHjxAj-metaZjNkNzVjMWQtMTI1OS00NDA4LTg0YmQtNzA0NTVmMTljZjcwLTAucG5n-.png",    "post_process_mask" => false,    "only_mask" => false,    "alpha_matting" =>false,    "webhook" => null,    "track_id" => null  ];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v6/image_editing/removebg_mask',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
-
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v6/image_editing/removebg_mask',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key":"",    "seed":12345,    "image":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/2ILk0g1tgpk7wFFlc72hyAtdmHjxAj-metaZjNkNzVjMWQtMTI1OS00NDA4LTg0YmQtNzA0NTVmMTljZjcwLTAucG5n-.png",    "post_process_mask": false,    "only_mask": false,    "alpha_matting":false,    "webhook": null,    "track_id": null  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
-
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v6/image_editing/removebg_mask"payload = json.dumps({    "key":"",    "seed":12345,    "image":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/2ILk0g1tgpk7wFFlc72hyAtdmHjxAj-metaZjNkNzVjMWQtMTI1OS00NDA4LTg0YmQtNzA0NTVmMTljZjcwLTAucG5n-.png",    "post_process_mask": false,    "only_mask": false,    "alpha_matting":false,    "seed": None,    "webhook": None,    "track_id": None})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
-
-```
-    OkHttpClient client = new OkHttpClient().newBuilder()      .build();    MediaType mediaType = MediaType.parse("application/json");    RequestBody body = RequestBody.create(mediaType, "{\n     \"key\":\"\",\n    \"seed\":12345,\n    \"image\":\"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/2ILk0g1tgpk7wFFlc72hyAtdmHjxAj-metaZjNkNzVjMWQtMTI1OS00NDA4LTg0YmQtNzA0NTVmMTljZjcwLTAucG5n-.png\",\n    \"post_process_mask\": false,\n    \"only_mask\": false,\n    \"alpha_matting\":false,\n    \"webhook\": null,\n    \"track_id\": null\n}");    Request request = new Request.Builder()      .url("https://modelslab.com/api/v6/image_editing/removebg_mask")      .method("POST", body)      .addHeader("Content-Type", "application/json")      .build();    Response response = client.newCall(request).execute();
-```
-
-### Response[​](#response "Direct link to Response")
-
-* Success
-* Processing
-* Error
-
-```
-{    "status": "success",    "generationTime": 4.713963508605957,    "id": 96708,    "output": [        "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/fcc2d175-1272-4ed6-a6b9-02a8f26af08c.png"    ],    "proxy_links": [        "https://cdn2.stablediffusionapi.com/generations/fcc2d175-1272-4ed6-a6b9-02a8f26af08c.png"    ],    "meta": {        "alpha_matting": "0",        "alpha_matting_background_threshold": 20,        "alpha_matting_erode_size": 5,        "alpha_matting_foreground_threshold": 240,        "base64": "no",        "file_prefix": "fcc2d175-1272-4ed6-a6b9-02a8f26af08c",        "image_url": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/2ILk0g1tgpk7wFFlc72hyAtdmHjxAj-metaZjNkNzVjMWQtMTI1OS00NDA4LTg0YmQtNzA0NTVmMTljZjcwLTAucG5n-.png",        "n_samples": 1,        "only_mask": "0",        "outdir": "out",        "post_process_mask": "0",        "seed": 1,        "temp": "no"    }}
-```
-
-```
-{    "status": "processing",    "tip": "Your image is processing in background, you can get this image using fetch API",    "eta": 5,    "message": "Try to fetch request after seconds estimated",    "fetch_result": "https://modelslab.com/api/v6/image_editing/fetch/134932313",    "id": 134932313,    "output": [],    "future_links": [        "https://cdn2.stablediffusionapi.com/generations/4bc4bea1-7351-4301-ae5d-03d47ea6baf6.png"    ],    "proxy_links": "",    "meta": {        "alpha_matting": "0",        "alpha_matting_background_threshold": 20,        "alpha_matting_erode_size": 5,        "alpha_matting_foreground_threshold": 240,        "base64": "no",        "file_prefix": "4bc4bea1-7351-4301-ae5d-03d47ea6baf6",        "id": "134932313",        "image_url": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/c1be350f-f1cf-4660-97ca-ab689d754d9f-0.png",        "inverse_mask": "no",        "n_samples": 1,        "only_mask": "0",        "opacity": 0.7,        "outdir": "out",        "output": [            "https://cdn2.stablediffusionapi.com/generations/4bc4bea1-7351-4301-ae5d-03d47ea6baf6.png"        ],        "padding_down": 10,        "padding_right": 10,        "post_process_mask": "0",        "scale_down": 6,        "seed": 1370263785,        "temp": "no",        "track_id": "3422",        "watermark": "no",        "webhook": "https://webhook.site/82d8bbb5-fa86-4890-882e-a638704947ce"    }}
-```
-
-```
-{    "status": "error",    "message": "Error message"}
+## Body
+```json json
+{    
+    "key":"",    
+    "seed":12345,    
+    "image":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/2ILk0g1tgpk7wFFlc72hyAtdmHjxAj-metaZjNkNzVjMWQtMTI1OS00NDA4LTg0YmQtNzA0NTVmMTljZjcwLTAucG5n-.png",    
+    "post_process_mask": false,    
+    "only_mask": false,    
+    "alpha_matting":false,    
+    "webhook": null,    
+    "track_id": null  
+}
 ```
