--- a/api-reference/apis/image-editing/flux-headshot.mdx
+++ b/api-reference/apis/image-editing/flux-headshot.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Enterprise: Flux Head Shot Endpoint"
+title: "Flux Head Shot Endpoint"
 openapi: 'POST /flux_headshot'
 description: 'This endpoint allows you to generate head shot with flux capabilities.'
 ---
