--- a/api-reference/apis/image-editing/overview.mdx
+++ b/api-reference/apis/image-editing/overview.mdx
@@ -1,44 +1,45 @@
 ---
-title: "Image Editing API"
+title: "Overview"
+description: 'The image editing suite brings you some exclusive API endpoints with few default essential endpoints.'
 ---
 
 ### Endpoints
 
 <CardGroup cols={2}>
-  <Card title="Fashion" href="/api-reference/video-api/texttovideo" img="">
+  <Card title="Fashion" href="/api-reference/image-editing/fashion" img="">
     Allows overlaying a clothing image on a model body; inputs need white background, full-body model, and isolated clothing.
   </Card>
-  <Card title="Facegen" href="/api-reference/video-api/texttovideo" img="">
+  <Card title="Facegen" href="/api-reference/image-editing/face-gem" img="">
     This endpoint allows you to generate image with the face image provided.
   </Card>
-  <Card title="Inpainting" href="/api-reference/video-api/texttovideo" img="">
+  <Card title="Inpainting" href="/api-reference/image-editing/inpaint" img="">
     Generates and returns an image from an image and a mask passed with their URLs in the request.
   </Card>
-  <Card title="Outpainting" href="/api-reference/video-api/texttovideo" img="">
+  <Card title="Outpainting" href="/api-reference/image-editing/outpaint" img="">
     Use this endpoint to outpaint.
   </Card>
-  <Card title="Super Resolution" href="/api-reference/video-api/texttovideo" img="">
+  <Card title="Super Resolution" href="/api-reference/image-editing/super-resolution" img="">
     Use this endpoint to get a super resolution version of an image by passing its URL.
   </Card>
-  <Card title="Remove Background Create Mask" href="/api-reference/video-api/texttovideo" img="">
+  <Card title="Remove Background Create Mask" href="/api-reference/image-editing/removebg-createmask" img="">
     Use this endpoint to remove background and(or) create mask.
   </Card>
-  <Card title="Flux Headshot" href="/api-reference/video-api/texttovideo" img="">
+  <Card title="Flux Headshot" href="/api-reference/image-editing/flux-headshot" img="">
     This endpoint allows you to generate head shot with flux capabilities.
   </Card>
-  <Card title="Head Shot" href="/api-reference/video-api/texttovideo" img="">
+  <Card title="Head Shot" href="/api-reference/image-editing/head-shot" img="">
     This endpoint allows you to generate head shot image.
   </Card>
-  <Card title="Image Mixer" href="/api-reference/video-api/texttovideo" img="">
+  <Card title="Image Mixer" href="/api-reference/image-editing/imagemixer" img="">
     Image mixers merges two images togethers to produce an eye catching result.
   </Card>
-  <Card title="Mask Creator" href="/api-reference/video-api/texttovideo" img="">
+  <Card title="Mask Creator" href="/api-reference/image-editing/mask-creator" img="">
     This endpoint helps to mask an object on a given image.
   </Card>
-  <Card title="Object Remover" href="/api-reference/video-api/texttovideo" img="">
+  <Card title="Object Remover" href="/api-reference/image-editing/" img="">
     This endpoint helps to remove object from an existing image.
   </Card>
-  <Card title="Base64 to URL" href="/api-reference/video-api/texttovideo" img="">
+  <Card title="Base64 to URL" href="/api-reference/image-editing/" img="">
     This endpoint allows you to upload image in base64 format and get it in url format.
   </Card>
 </CardGroup>
