--- a/api-reference/voice-cloning/overview.mdx
+++ b/api-reference/voice-cloning/overview.mdx
@@ -7,34 +7,37 @@ description: 'Tools for speech-to-text, text-to-speech, text-to-SFX, and voice-o
 ### Endpoints
 
 <CardGroup>
-  <Card title="Text to Speech" href="/api-reference/apis/voice-cloning/text-to-speech">
+  <Card title="Text to Speech" href="/api-reference/voice-cloning/text-to-speech">
     Transform text content into high-quality speech using advanced TTS technology
   </Card>
-  <Card title="Voice Cloning" href="/api-reference/apis/voice-cloning/voice-to-voice">
+  <Card title="Voice Cloning" href="/api-reference/voice-cloning/voice-cloning">
     Clone and replicate voices from target audio files with precision
   </Card>
-  <Card title="Speech to Text" href="/api-reference/apis/voice-cloning/speech_to_text" >
+  <Card title="Speech to Text" href="/api-reference/voice-cloning/speech-to-text" >
     Convert audio recordings into accurate written transcriptions
   </Card>
-  <Card title="Vocal Isolator" href="/api-reference/apis/voice-cloning/vocal-isolator" >
+  <Card title="Vocal Isolator" href="/api-reference/voice-cloning/vocal-isolator" >
     Extract and isolate vocal tracks from music and audio files
   </Card>
-  <Card title="Lyrics Generator" href="/api-reference/apis/voice-cloning/lyrics-generator" >
+   <Card title="Voice Changer" href="/api-reference/voice-cloning/voice-to-voice" >
+    Extract and isolate vocal tracks from music and audio files
+  </Card>
+  <Card title="Lyrics Generator" href="/api-reference/voice-cloning/lyrics-generator" >
     Generate creative song lyrics using AI-powered text generation
   </Card>
-  <Card title="Song Generator" href="/api-reference/apis/voice-cloning/song-generator">
+  <Card title="Song Generator" href="/api-reference/voice-cloning/song-generator">
     Create complete songs with AI-generated music and vocal compositions
   </Card>
-  <Card title="AI Dubbing" href="/api-reference/apis/voice-cloning/create-dubbing" >
+  <Card title="AI Dubbing" href="/api-reference/voice-cloning/create-dubbing" >
     Create professional dubbing for videos with synchronized voice replacement
   </Card>
-  <Card title="Voice Cover Music" href="/api-reference/apis/voice-cloning/voice-cover">
+  <Card title="Song Cover" href="/api-reference/voice-cloning/voice-cover">
     Generate cover versions of songs using AI voice synthesis technology
   </Card>
-  <Card title="Sound Effects" href="/api-reference/apis/voice-cloning/sfx" >
+  <Card title="Sound Effects" href="/api-reference/voice-cloning/sfx" >
     Create custom sound effects and audio elements for multimedia projects
   </Card>
-  <Card title="Music Generation" href="/api-reference/apis/voice-cloning/music-gen" >
+  <Card title="Music Generation" href="/api-reference/voice-cloning/music-gen" >
     Generate original music compositions based on textual prompts and styles
   </Card>
 </CardGroup>
