--- a/api-reference/voice-cloning/sfx.mdx
+++ b/api-reference/voice-cloning/sfx.mdx
@@ -1,5 +1,5 @@
 ---
-title: "SFX Endpoint"
+title: "Sound Effects Endpoint"
 openapi: 'POST /voice/sfx'
 description: 'Generate lifelike Sound effects using text prompts.'
 ---
