--- a/api-reference/voice-cloning/voice-cover.mdx
+++ b/api-reference/voice-cloning/voice-cover.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Voice Cover Endpoint"
+title: "Song Cover Endpoint"
 openapi: 'POST /voice/voice_cover'
 description: 'Transform a song into a different voice using a provided model. Find all available voice models, [HERE](https://modelslab.com/models/category/voice-cloning).'
 ---
