--- a/api-reference/apis/image-generation/a1111-scheduler/overview.mdx
+++ b/api-reference/apis/image-generation/a1111-scheduler/overview.mdx
@@ -1,11 +1,10 @@
 ---
 title: "Overview"
+description: 'list of All available A1111 Diffusers Schedulers.'
 ---
 
-## Overview[​](#overview "Direct link to Overview")
-
-Get the list of available A1111 Diffusers Scheduler Mapping
-
-### A1111 Diffusers Scheduler Mapping[​](#a1111-diffusers-scheduler-mapping "Direct link to A1111 Diffusers Scheduler Mapping")
-
-Get the list of available A1111 Diffusers Scheduler Mapping
+<CardGroup>
+  <Card title="A1111 Diffusers Scheduler Mapping" href="/api-reference/image-generation/a1111-scheduler/a1111-schedulers" >
+    Get the list of available A1111 Diffusers Scheduler Mapping
+  </Card>
+</CardGroup>
