--- a/api-reference/apis/image-generation/community-models/dreambooth-fetch-queue-image.mdx
+++ b/api-reference/apis/image-generation/community-models/dreambooth-fetch-queue-image.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Fetch Queued Images Endpoint"
-openapi: 'POST /images/fetch'
+openapi: 'POST /fetch'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
