--- a/api-reference/apis/image-generation/community-models/dreambooth-image-to-image.mdx
+++ b/api-reference/apis/image-generation/community-models/dreambooth-image-to-image.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Image to Image Endpoint"
-openapi: 'POST /images/img2img'
+openapi: 'POST /img2img'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
