--- a/api-reference/apis/image-generation/community-models/dreambooth-inpainting.mdx
+++ b/api-reference/apis/image-generation/community-models/dreambooth-inpainting.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Inpainting Endpoint"
-openapi: 'POST /images/inpaint'
+openapi: 'POST /inpaint'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
