--- a/api-reference/apis/image-generation/train-model/cancel-training.mdx
+++ b/api-reference/apis/image-generation/train-model/cancel-training.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Cancel Training Request"
+openapi: 'POST /cancel_training/{training_id}'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
