--- a/api-reference/apis/image-generation/train-model/finetune-status.mdx
+++ b/api-reference/apis/image-generation/train-model/finetune-status.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Get Training Status"
+openapi: 'POST /fine_tune_status/{training_id}'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
