--- a/api-reference/apis/image-generation/train-model/lora-finetune.mdx
+++ b/api-reference/apis/image-generation/train-model/lora-finetune.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Train a Lora Model with Custom Images"
+openapi: 'POST /lora_fine_tune'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
