--- a/api-reference/apis/image-generation/community-models/dreambooth-lora.mdx
+++ b/api-reference/apis/image-generation/community-models/dreambooth-lora.mdx
@@ -1,6 +1,6 @@
 ---
 title: "LoRA"
-openapi: 'POST /images/text2img'
+openapi: 'POST /text2img'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
