--- a/api-reference/apis/image-generation/community-models/dreambooth-reload-model.mdx
+++ b/api-reference/apis/image-generation/community-models/dreambooth-reload-model.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Reload Model Endpoint"
-openapi: 'POST /images/model_reload'
+openapi: 'POST /model_reload'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
