--- a/api-reference/apis/image-generation/train-model/base64-crop.mdx
+++ b/api-reference/apis/image-generation/train-model/base64-crop.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Upload Base64 Image and Crop"
+openapi: 'POST /base64_crop'
 ---
 
 ## Overview[​](#overview "Direct link to Overview")
