--- a/api-reference/image-generation/controlnet/overview.mdx
+++ b/api-reference/image-generation/controlnet/overview.mdx
@@ -1,11 +1,15 @@
 ---
-title: "ControlNet API"
+title: "Overview"
+description: 'The ControlNet API provides more control over the generated images. It also supports providing multiple ControlNet models.'
 ---
 
-## Overview[​](#overview "Direct link to Overview")
+### Endpoints
 
-The ControlNet API provides more control over the generated images. It also supports providing multiple ControlNet models.
-
-## Playground[​](#playground "Direct link to Playground")
-
-You can try the available ControlNet models in our [Playground](https://modelslab.com/playground/new?feature=control-net) section, just make sure to [sign up](https://modelslab.com/register) first.
+<CardGroup>
+    <Card title='Controlnet' href='/api-reference/image-generation/controlnet/controlnet-main'>
+    The ControlNet API provides more control over the generated images. It also supports providing multiple ControlNet models.
+    </Card>
+    <Card title='Controlnet Multi' href='/api-reference/image-generation/controlnet/controlnet-multi'>
+    The ControlNet API provides more control over the generated images. It also supports providing multiple ControlNet models.
+    </Card>
+</CardGroup>
