--- a/api-reference/image-generation/controlnet/controlnet-multi.mdx
+++ b/api-reference/image-generation/controlnet/controlnet-multi.mdx
@@ -1,75 +1,28 @@
 ---
 title: "ControlNet Multi Endpoint"
 openapi: 'POST /controlnet'
+description: 'Control Stable Diffusion generations with Multi ControlNet.'
 ---
 
-## Overview[​](#overview "Direct link to Overview")
-
-You can now specify multiple ControlNet [models](#models). Just make sure to pass **comma separated** ControlNet models to the `controlnet_model` parameter as "canny,depth" and `init_image` in the request body.
-
 <Check>
-  You can also use this endpoint to inpaint images with ControlNet. Just make sure to pass the link to the `mask_image` in the request body and the controlnet\_model parameter with the "inpaint" value.
+The ControlNet [models](#models) are available in this API.
 </Check>
-
 <Info>
-  Read our detailed **[blog article](https://modelslab.com/blog/stable-diffusion-api/control-net-stable-diffusion-api)** about ControlNet.
+  You can also use this endpoint to inpaint images with ControlNet. Just make sure to pass the link to the `mask_image` in the request body and use the `controlnet_model` parameter with "inpaint" value.
 </Info>
 
-## Request[​](#request "Direct link to Request")
-
-```
+## Request
+Send a `POST` request to below endpoint.
+```curl curl
 --request POST 'https://modelslab.com/api/v5/controlnet' \
 ```
 
-Send a `POST` request to [https://modelslab.com/api/v5/controlnet](https://modelslab.com/api/v5/controlnet) endpoint.
-
-## Body Attributes[​](#body-attributes "Direct link to Body Attributes")
-
-| Parameter                           | Description                                                                                                                                                                            |
-| :---------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **key**                             | Your API Key used for request authorization                                                                                                                                            |
-| **model\_id**                       | The ID of the model to be used. It can be public or your trained model. (**Note**: Muti Controlnet does not apply when using the model with `flux`)                                    |
-| **controlnet\_model**               | ControlNet model ID. It can be from the [models](#models) list or user trained.                                                                                                        |
-| **controlnet\_type**                | ControlNet model type. It can be from the [models](#models) list.                                                                                                                      |
-| **auto\_hint**                      | Auto hint image;**options**: yes/no                                                                                                                                                    |
-| **guess\_mode**                     | Set this to *yes* if you don't pass any prompt. The model will try to guess what's in the **init\_image** and create best variations on its own. **Options**: yes/no                   |
-| **prompt**                          | Text prompt with description of required image modifications. Make it as detailed as possible for best results.                                                                        |
-| **negative\_prompt**                | Items you don't want in the image                                                                                                                                                      |
-| **init\_image**                     | Link to the Initial Image                                                                                                                                                              |
-| **control\_image**                  | Link to the Controlnet Image                                                                                                                                                           |
-| **mask\_image**                     | Link to the mask image for inpainting                                                                                                                                                  |
-| **width**                           | Max Height: Width: 1024x1024                                                                                                                                                           |
-| **height**                          | Max Height: Width: 1024x1024                                                                                                                                                           |
-| **samples**                         | Number of images to be returned in response. The maximum value is 4.                                                                                                                   |
-| **scheduler**                       | Use it to set a [scheduler](#schedulers).                                                                                                                                              |
-| **tomesd**                          | Enable tomesd to generate images: gives really fast results, **default**: yes, **options**: yes/no                                                                                     |
-| **use\_karras\_sigmas**             | Use keras sigmas to generate images. gives nice results, **default**: yes, **options**: yes/no                                                                                         |
-| **algorithm\_type**                 | Used in DPMSolverMultistepScheduler scheduler, **default**: none, **options**: dpmsolver+++                                                                                            |
-| **vae**                             | Use custom vae in generating images **default**: null                                                                                                                                  |
-| **lora\_strength**                  | Specify the strength of the LoRa model you're using. If using multiple LoRa, provide each value as a comma-separated range from minimum 0.1 to maximum 1.                              |
-| **lora\_model**                     | Multi lora is supported, pass comma saparated values. Example contrast-fix,yae-miko-genshin                                                                                            |
-| **num\_inference\_steps**           | Number of denoising steps , The value accepts 21,31,                                                                                                                                   |
-| **safety\_checker**                 | A checker for NSFW images. If such an image is detected, it will be replaced by a blank image; default: yes, options: yes/no                                                           |
-| **ip\_adapter\_id**                 | Ip adpater id. The supported ids are `ip-adapter_sdxl`, `ip-adapter_sd15`,`ip-adapter-plus-face_sd15`                                                                                  |
-| **ip\_adapter\_scale**              | Scale should be between 0 to 1                                                                                                                                                         |
-| **ip\_adapter\_image**              | Valid image url for ip adapter                                                                                                                                                         |
-| **enhance\_prompt**                 | Enhance prompts for better results; **default**: yes, **options**: yes/no                                                                                                              |
-| **controlnet\_conditioning\_scale** | "guidance\_scale" for controlnet, Scale for controlnet guidance. Accepts floating values from 0.1 to 5 (e.g. 0.5)                                                                      |
-| **strength**                        | Prompt strength when using **init\_image**. 1.0 corresponds to full destruction of information in the init image.                                                                      |
-| **seed**                            | Seed is used to reproduce results, same seed will give you same image in return again. Pass *null* for a random number.                                                                |
-| **webhook**                         | Set an URL to get a POST API call once the image generation is complete.                                                                                                               |
-| **track\_id**                       | This ID is returned in the response to the webhook API call. This will be used to identify the webhook request.                                                                        |
-| **upscale**                         | Set this parameter to "yes" if you want to upscale the given image resolution two times (2x). If the requested resolution is 512 x 512 px, the generated image will be 1024 x 1024 px. |
-| **clip\_skip**                      | Clip Skip (minimum: 1; maximum: 8)                                                                                                                                                     |
-| **base64**                          | Get response as base64 string, pass init\_image, mask\_image , control\_image as base64 string, to get base64 response. **default**: "no", **options**: yes/no                         |
-| **temp**                            | Create temp image link. This link is valid for 24 hours. **temp**: yes, **options**: yes/no                                                                                            |
-
+## Body
 <Check>
-  You can also use multi ControlNet. Just make sure to pass comma separated ControlNet models to the `controlnet_model` as "canny,depth" and `init_image` in the request body.
+  You can also use multi ControlNet. Just make sure to pass comma separated ControlNet models to the `controlnet_model` as `canny,depth` and `init_image` in the request body.
 </Check>
 
-### Models[​](#models "Direct link to Models")
-
+### Models
 ControlNet API using Controlnet 1.1 as default: Suported controlnet\_model:
 
 * canny
@@ -85,12 +38,11 @@ ControlNet API using Controlnet 1.1 as default: Suported controlnet\_model:
 * lineart
 * shuffle
 * tile
-* face\_detector
+* face_detector
 * qrcode
 
-### Schedulers[​](#schedulers "Direct link to Schedulers")
-
-This endpoint also supports schedulers. Use the "scheduler" parameter in the request body to pass a specific scheduler from the list below:
+### Schedulers
+This endpoint also supports schedulers. Use the `scheduler` parameter in the request body to pass a specific scheduler from the list below:
 
 * DDPMScheduler
 * DDIMScheduler
@@ -111,58 +63,38 @@ This endpoint also supports schedulers. Use the "scheduler" parameter in the req
 * ScoreSdeVeScheduler
 * LCMScheduler
 
-## Example[​](#example "Direct link to Example")
+## Body
 
-### Body[​](#body "Direct link to Body")
-
-Body Raw
-
-```
-{  "key": "",  "controlnet_model": "openpose,canny,face_detector",  "controlnet_type" :"openpose",  "model_id": "midjourney",  "auto_hint": "yes",  "guess_mode" : "yes",  "prompt": "human model doing photoshoot, ultra realistic face, ultra high resolution, 4K image",  "negative_prompt": null,  "control_image":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/rVV5jY824zGbYbsAIXDCg5pCkf4EQr-metaZ2VuX2NvbXBhcmVfY29udHJvbF9pbWFnZXNfY29udmVydGVkX2NvbnRyb2xfaHVtYW5fb3BlbnBvc2UgKDMpLnBuZw==-.png",  "init_image": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/4BJiQzb87q78JHGFyz5MaSRzdvzIEU-metaMDAwNS5wbmc=-.png",  "mask_image": null,  "width": "512",  "height": "512",  "samples": "1",  "scheduler": "UniPCMultistepScheduler",  "num_inference_steps": "30",  "safety_checker": "no",  "enhance_prompt": "yes",  "guidance_scale": 7.5,  "controlnet_conditioning_scale": 0.7,  "strength": 0.55,  "lora_model": "yae-miko-genshin,more_details",  "clip_skip": "2",  "tomesd": "yes",  "use_karras_sigmas": "yes",  "lora_strength": null,  "seed": null,  "webhook": null,  "track_id": null}
-```
-
-### Request[​](#request-1 "Direct link to Request")
-
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
-
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({  "key": "",  "controlnet_model": "openpose,canny,face_detector",  "controlnet_type" :"openpose",  "model_id": "midjourney",  "auto_hint": "yes",  "guess_mode" : "yes",  "prompt": "human model doing photoshoot, ultra realistic face, ultra high resolution, 4K image",  "negative_prompt": null,  "control_image":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/rVV5jY824zGbYbsAIXDCg5pCkf4EQr-metaZ2VuX2NvbXBhcmVfY29udHJvbF9pbWFnZXNfY29udmVydGVkX2NvbnRyb2xfaHVtYW5fb3BlbnBvc2UgKDMpLnBuZw==-.png",  "init_image": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/4BJiQzb87q78JHGFyz5MaSRzdvzIEU-metaMDAwNS5wbmc=-.png",  "mask_image": null,  "width": "512",  "height": "512",  "samples": "1",  "scheduler": "UniPCMultistepScheduler",  "num_inference_steps": "30",  "safety_checker": "no",  "enhance_prompt": "yes",  "guidance_scale": 7.5,  "controlnet_conditioning_scale": 0.7,  "strength": 0.55,  "lora_model": "yae-miko-genshin,more_details",  "clip_skip": "2",  "tomesd": "yes",  "use_karras_sigmas": "yes",  "lora_strength": null,  "seed": null,  "webhook": null,  "track_id": null});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v5/controlnet", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
-
-```
-<?php$payload = [  "key" => "",   "controlnet_model" => "openpose,canny,face_detector",   "controlnet_type" => "openpose",   "model_id" => "midjourney",   "auto_hint" => "yes",   "guess_mode" => "yes",   "prompt" => "human model doing photoshoot, ultra realistic face, ultra high resolution, 4K image",   "negative_prompt" => null,   "control_image" => "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/rVV5jY824zGbYbsAIXDCg5pCkf4EQr-metaZ2VuX2NvbXBhcmVfY29udHJvbF9pbWFnZXNfY29udmVydGVkX2NvbnRyb2xfaHVtYW5fb3BlbnBvc2UgKDMpLnBuZw==-.png",   "init_image" => "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/4BJiQzb87q78JHGFyz5MaSRzdvzIEU-metaMDAwNS5wbmc=-.png",   "mask_image" => null,   "width" => "512",   "height" => "512",   "samples" => "1",   "scheduler" => "UniPCMultistepScheduler",   "num_inference_steps" => "30",   "safety_checker" => "no",   "enhance_prompt" => "yes",   "guidance_scale" => 7.5,   "controlnet_conditioning_scale" => 0.7,  "strength" => 0.55,   "lora_model" => "yae-miko-genshin,more_details",   "clip_skip" => "2",   "tomesd" => "yes",   "use_karras_sigmas" => "yes",  "lora_strength" => null,    "seed" => null,   "webhook" => null,   "track_id" => null ];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v5/controlnet',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
-
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v5/controlnet',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key": "",    "controlnet_model": "openpose,canny,face_detector",    "controlnet_type" :"openpose",    "model_id": "midjourney",    "auto_hint": "yes",    "guess_mode" : "yes",    "prompt": "human model doing photoshoot, ultra realistic face, ultra high resolution, 4K image",    "negative_prompt": null,    "control_image":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/4BJiQzb87q78JHGFyz5MaSRzdvzIEU-metaMDAwNS5wbmc=-.png",    "init_image": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/rVV5jY824zGbYbsAIXDCg5pCkf4EQr-metaZ2VuX2NvbXBhcmVfY29udHJvbF9pbWFnZXNfY29udmVydGVkX2NvbnRyb2xfaHVtYW5fb3BlbnBvc2UgKDMpLnBuZw==-.png",    "mask_image": null,    "width": "512",    "height": "512",    "samples": "1",    "scheduler": "UniPCMultistepScheduler",    "num_inference_steps": "30",    "safety_checker": "no",    "enhance_prompt": "yes",    "guidance_scale": 7.5,    "controlnet_conditioning_scale": 0.7,    "strength": 0.55,    "lora_model": "yae-miko-genshin,more_details",    "clip_skip": "2",    "tomesd": "yes",    "use_karras_sigmas": "yes",    "lora_strength": null,    "seed": null,    "webhook": null,    "track_id": null  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
-
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v5/controlnet"payload = json.dumps({  "key": "",  "controlnet_model": "openpose,canny,face_detector",  "controlnet_type" :"openpose",  "model_id": "midjourney",  "auto_hint": "yes",  "guess_mode" : "yes",  "prompt": "human model doing photoshoot, ultra realistic face, ultra high resolution, 4K image",  "negative_prompt": None,  "control_image":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/rVV5jY824zGbYbsAIXDCg5pCkf4EQr-metaZ2VuX2NvbXBhcmVfY29udHJvbF9pbWFnZXNfY29udmVydGVkX2NvbnRyb2xfaHVtYW5fb3BlbnBvc2UgKDMpLnBuZw==-.png",  "init_image": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/4BJiQzb87q78JHGFyz5MaSRzdvzIEU-metaMDAwNS5wbmc=-.png",  "mask_image": None,  "width": "512",  "height": "512",  "samples": "1",  "scheduler": "UniPCMultistepScheduler",  "num_inference_steps": "30",  "safety_checker": "no",  "enhance_prompt": "yes",  "guidance_scale": 7.5,  "controlnet_conditioning_scale": 0.7,  "strength": 0.55,  "lora_model": "yae-miko-genshin,more_details",  "clip_skip": "2",  "tomesd": "yes",  "use_karras_sigmas": "yes",  "lora_strength": None,  "seed": None,  "webhook": None,  "track_id": None})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
-
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n     \"key\": \"\",\n  \"controlnet_model\": \"openpose,canny,face_detector\",\n  \"controlnet_type\" :\"openpose\",\n  \"model_id\": \"midjourney\",\n  \"auto_hint\": \"yes\",\n  \"guess_mode\" : \"yes\",\n  \"prompt\": \"human model doing photoshoot, ultra realistic face, ultra high resolution, 4K image\",\n  \"negative_prompt\": null,\n  \"control_image\": \"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/4BJiQzb87q78JHGFyz5MaSRzdvzIEU-metaMDAwNS5wbmc=-.png\",\n  \"init_image\": \"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/rVV5jY824zGbYbsAIXDCg5pCkf4EQr-metaZ2VuX2NvbXBhcmVfY29udHJvbF9pbWFnZXNfY29udmVydGVkX2NvbnRyb2xfaHVtYW5fb3BlbnBvc2UgKDMpLnBuZw==-.png\",\n  \"mask_image\": null,\n  \"width\": \"512\",\n  \"height\": \"512\",\n  \"samples\": \"1\",\n  \"scheduler\": \"UniPCMultistepScheduler\",\n  \"num_inference_steps\": \"30\",\n  \"safety_checker\": \"no\",\n  \"enhance_prompt\": \"yes\",\n  \"guidance_scale\": 7.5,\n  \"controlnet_conditioning_scale\": 0.7,\n  \"strength\": 0.55,\n  \"lora_model\": \"yae-miko-genshin,more_details\",\n  \"clip_skip\": \"2\",\n  \"tomesd\": \"yes\",\n  \"use_karras_sigmas\": \"yes\",\n  \n  \"lora_strength\": null,\n  \"seed\": null,\n  \"webhook\": null,\n  \"track_id\": null\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v5/controlnet")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
-
-### Response[​](#response "Direct link to Response")
-
-* Success
-* Processing
-* Error
-
-```
-{    "status": "success",    "id": 120540119,    "output": [        "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/8ePKy3mET2HWstIOSQwQwWauhzj0fR-metaMC1hZjBhMjQ0YS0yZjA5LTQyOGItODVkNS00OTc5ZDMxMGY1MDEucG5n-.png"    ],    "future_links": [        "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/8ePKy3mET2HWstIOSQwQwWauhzj0fR-metaMC1hZjBhMjQ0YS0yZjA5LTQyOGItODVkNS00OTc5ZDMxMGY1MDEucG5n-.png"    ],    "meta": {        "prompt": "mdjrny-v4 style human model doing photoshoot, ultra realistic face, ultra high resolution, 4k image",        "model_id": "midjourney",        "controlnet_model": "openpose,canny,face_detector",        "controlnet_type": "openpose",        "negative_prompt": "",        "scheduler": "UniPCMultistepScheduler",        "safety_checker": "no",        "auto_hint": "yes",        "guess_mode": "yes",        "strength": 1,        "W": 512,        "H": 512,        "guidance_scale": 7.5,        "controlnet_conditioning_scale": "0.7",        "seed": 64991234,        "multi_lingual": "no",        "use_karras_sigmas": "yes",        "algorithm_type": "no",        "safety_checker_type": "sensitive_content_text",        "instant_response": "no",        "tomesd": "yes",        "init_image": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/8ePKy3mET2HWstIOSQwQwWauhzj0fR-metaMC1hZjBhMjQ0YS0yZjA5LTQyOGItODVkNS00OTc5ZDMxMGY1MDEucG5n-.png",        "mask_image": null,        "control_image": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/rVV5jY824zGbYbsAIXDCg5pCkf4EQr-metaZ2VuX2NvbXBhcmVfY29udHJvbF9pbWFnZXNfY29udmVydGVkX2NvbnRyb2xfaHVtYW5fb3BlbnBvc2UgKDMpLnBuZw==-.png",        "steps": 20,        "full_url": "no",        "upscale": "no",        "n_samples": 1,        "ip_adapter_id": null,        "ip_adapter_scale": 0.6,        "ip_adapter_image": null,        "enhance_prompt": "no",        "enhance_style": null,        "lora": "yae-miko-genshin,more_details",        "lora_strength": 1,        "watermark": "no",        "temp": "no",        "base64": "no",        "clip_skip": 2,        "file_prefix": "6e545ad7-ce65-45b6-86f4-091f414ed24f.png"    }}
-```
-
-```
-{    "status": "processing",    "tip": "Get 20x faster image generation using enterprise plan. Click here : https://modelslab.com/enterprise",    "tip_1": "Your image is processing in background, you can get this image using fetch API: here is link for fetch api : https://docs.modelslab.com/image-generation/community-models/dreamboothfetchqueimg",    "eta": 0.25,    "messege": "Try to fetch request after seconds estimated",    "fetch_result": "https://modelslab.com/api/v6/images/fetch/120540119",    "id": 120540119,    "output": "",    "future_links": [        "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/8ePKy3mET2HWstIOSQwQwWauhzj0fR-metaMC1hZjBhMjQ0YS0yZjA5LTQyOGItODVkNS00OTc5ZDMxMGY1MDEucG5n-.png"    ],    "meta": {        "prompt": "mdjrny-v4 style human model doing photoshoot, ultra realistic face, ultra high resolution, 4k image",        "model_id": "midjourney",        "controlnet_model": "openpose,canny,face_detector",        "controlnet_type": "openpose",        "negative_prompt": "",        "scheduler": "UniPCMultistepScheduler",        "safety_checker": "no",        "auto_hint": "yes",        "guess_mode": "yes",        "strength": 1,        "W": 512,        "H": 512,        "guidance_scale": 7.5,        "controlnet_conditioning_scale": "0.7",        "seed": 64991234,        "multi_lingual": "no",        "use_karras_sigmas": "yes",        "algorithm_type": "no",        "safety_checker_type": "sensitive_content_text",        "instant_response": "no",        "tomesd": "yes",        "init_image": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/8ePKy3mET2HWstIOSQwQwWauhzj0fR-metaMC1hZjBhMjQ0YS0yZjA5LTQyOGItODVkNS00OTc5ZDMxMGY1MDEucG5n-.png",        "mask_image": null,        "control_image": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/rVV5jY824zGbYbsAIXDCg5pCkf4EQr-metaZ2VuX2NvbXBhcmVfY29udHJvbF9pbWFnZXNfY29udmVydGVkX2NvbnRyb2xfaHVtYW5fb3BlbnBvc2UgKDMpLnBuZw==-.png",        "steps": 20,        "full_url": "no",        "upscale": "no",        "n_samples": 1,        "ip_adapter_id": null,        "ip_adapter_scale": 0.6,        "ip_adapter_image": null,        "enhance_prompt": "no",        "enhance_style": null,        "lora": "yae-miko-genshin,more_details",        "lora_strength": 1,        "watermark": "no",        "temp": "no",        "base64": "no",        "clip_skip": 2,        "file_prefix": "6e545ad7-ce65-45b6-86f4-091f414ed24f.png"    }}
-```
-
-```
-{    "status": "error",    "messege": "Error message"}
+```json json
+{  
+  "key": "",  
+  "controlnet_model": "openpose,canny,face_detector",  
+  "controlnet_type" :"openpose",  
+  "model_id": "midjourney",  
+  "auto_hint": "yes",  
+  "guess_mode" : "yes",  
+  "prompt": "human model doing photoshoot, ultra realistic face, ultra high resolution, 4K image",  
+  "negative_prompt": null,  
+  "control_image":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/rVV5jY824zGbYbsAIXDCg5pCkf4EQr-metaZ2VuX2NvbXBhcmVfY29udHJvbF9pbWFnZXNfY29udmVydGVkX2NvbnRyb2xfaHVtYW5fb3BlbnBvc2UgKDMpLnBuZw==-.png",  
+  "init_image": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/4BJiQzb87q78JHGFyz5MaSRzdvzIEU-metaMDAwNS5wbmc=-.png",  
+  "mask_image": null,  
+  "width": "512",  
+  "height": "512",  
+  "samples": "1",  
+  "scheduler": "UniPCMultistepScheduler",  
+  "num_inference_steps": "30",  
+  "safety_checker": "no",  
+  "enhance_prompt": "yes",  
+  "guidance_scale": 7.5,  
+  "controlnet_conditioning_scale": 0.7,  
+  "strength": 0.55,  
+  "lora_model": "yae-miko-genshin,more_details",  
+  "clip_skip": "2",  
+  "tomesd": "yes",  
+  "use_karras_sigmas": "yes",  
+  "lora_strength": null,  
+  "seed": null,  
+  "webhook": null,  
+  "track_id": null
+}
 ```
