--- a/api-reference/image-generation/flux/overview.mdx
+++ b/api-reference/image-generation/flux/overview.mdx
@@ -1,3 +1,12 @@
 ---
 title: 'Overview'
+description: 'Generate higher quality images with Flux family of models.'
 ---
+
+### Endpoints
+
+<CardGroup>
+  <Card title="Flux Text to Image" href="/api-reference/image-generation/flux/flux-text-to-image">
+    Create image from text based using flux model.
+  </Card>
+</CardGroup>
